--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=account
 spring.datasource.url=jdbc:h2:mem:jlanaja
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
